fix: remove sensitive keys from properties files